--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
     "concurrently": "^6.1.0",
+    "formik": "^2.2.6",
     "framer-motion": "^4",
     "polished": "^4.1.2",
     "react": "^17.0.2",
@@ -26,7 +27,8 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "client": "react-scripts start",
